--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 argon2-cffi==20.1.0
 asgiref==3.2.10
 astroid==2.4.2
+backports.zoneinfo==0.2.1
 bcrypt==3.2.0
 certifi==2020.12.5
 cffi==1.14.0
@@ -28,21 +29,26 @@ Markdown==3.3.4
 mccabe==0.6.1
 oauthlib==3.1.1
 Pillow==8.4.0
+psutil==5.8.0
 pycparser==2.20
 Pygments==2.8.1
-PyJWT==1.7.1
+PyJWT==2.1.0
 pylint==2.6.0
 PySocks==1.7.1
 python-dateutil==2.8.1
 python3-openid==3.2.0
-pytz==2020.5
+pytz==2021.3
 requests==2.25.1
 requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 six==1.15.0
+somepackage==1.2.3
 sqlparse==0.4.1
+tea==0.1.6
 text-unidecode==1.3
 toml==0.10.2
+tzdata==2021.5
+tzlocal==3.0
 urllib3==1.26.4
 waitress==2.0.0
 wrapt==1.12.1
